<resources>
    <string name="app_name">SimpleMessage</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="log_in">log in</string>
    <string name="reg">reg</string>
    <string name="exit">Exit</string>
    <string name="registration">Registration</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="send">send</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message</string>
</resources>
