<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nickolas.simplemessage.Login"
    android:paddingEnd="15dp"
    android:paddingStart="15dp">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/email"
            android:layout_height="50dp"
            android:hint="@string/email"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/pass"
            android:layout_height="50dp"
            android:hint="@string/pass"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_in"
            android:text="@string/log_in"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/reg"
            android:text="@string/reg"
            />
    </LinearLayout>

</LinearLayout>
