<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nickolas.simplemessage.Registration">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add_circle_black_24dp"
        android:id="@+id/registration_photo"
        android:layout_marginBottom="17dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="15dp">

        <EditText
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/name_and_surname"
            android:background="@null"
            android:paddingStart="15dp"
            android:id="@+id/registration_name"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="15dp">

        <EditText
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:background="@null"
            android:paddingStart="15dp"
            android:id="@+id/registration_email"
            android:inputType="textEmailAddress" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="15dp">

        <EditText
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/pass"
            android:background="@null"
            android:paddingStart="15dp"
            android:inputType="textPassword"
            android:id="@+id/registration_pass"/>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:textColor="#fff"
                android:id="@+id/registration_submit"/>

        </android.support.v7.widget.CardView>
        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/cancel"
            android:id="@+id/registration_cancel"/>
    </LinearLayout>


</LinearLayout>
