<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nickolas.simplemessage.LoginFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="15dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="300dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:paddingStart="15dp"
                    android:singleLine="true"
                    android:textCursorDrawable="@null" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="15dp">

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="300dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:hint="@string/pass"
                    android:paddingStart="15dp"
                    android:singleLine="true"
                    android:textCursorDrawable="@null" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="15dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/progress_bar"/>

                    <Button
                        android:id="@+id/log_in"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/log_in"
                        android:textColor="#fff" />
                </FrameLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="#fff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="OR"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="#fff"/>

            </LinearLayout>


            <android.support.v7.widget.CardView
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="15dp">
                    <Button
                        android:layout_width="300dp"
                        android:layout_height="48dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/registration"
                        android:textColor="#fff"
                        android:id="@+id/registration"/>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>
